# ds-docker

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  pyproject.toml  requirements.compile.txt  requirements.step2.txt  requirements.txt
tests/: albumentations_test.py  conftest.py  joblib_test.py  jupyter_test.py  lightgbm_test.py  matplotlib_test.py  opencv_test.py  optuna_test.py  pillow_test.py  pyfltr_test.py  python_test.py  pytorch_lightning_test.py  tensorflow_test.py  tfa_test.py  transformers_test.py  venv_test.py  xgboost_test.py
tests/data/: jupyter.ipynb
